--- a/example/rig.css
+++ b/example/rig.css
@@ -1,6 +1,11 @@
 body {
-	background-color: rgb(32,32,32);
-	font-family: "Audiowide", Times, serif
+  background-color: rgb(32, 32, 32);
+  font-family: "Audiowide", Times, serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .page {
@@ -18,9 +23,9 @@ body {
 }
 
 .titlebar {
-	width: 100%;
+  width: 100%;
   color: #008000;
-	padding: 128px 0px;
+  padding: 128px 0px;
   background: linear-gradient(90deg, #696E8F, #C40018);
   text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
@@ -34,7 +39,7 @@ body {
 
 .subtitle {
   font-size: 32px;
-	color: yellow;
+  color: yellow;
 }
 
 .header {
